--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,15 +24,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^0.1.2
+  community_material_icon:
+  outline_material_icons:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -61,9 +61,15 @@ flutter:
   # list giving the asset and other descriptors for the font. For
 
   fonts:
-    - family: IconsComponent
+    - family: GoogleBold
       fonts:
-        - asset: asset/fonts/IconsComponent.ttf
+        - asset: assets/fonts/GoogleSans-Bold.ttf
+    - family: GoogleMedium
+      fonts:
+        - asset: assets/fonts/GoogleSans-Medium.ttf
+    - family: GoogleRegular
+      fonts:
+        - asset: assets/fonts/GoogleSans-Regular.ttf
 
   # example:
   # fonts:
