--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: UI_Scanner
+name: gmail_clone
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
