--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,16 +59,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
 
-  #fonts:
-  #  - family: Mulish
-  #    fonts:
-  #      - asset: assets\fonts\Mulish-Regular.ttf
-  #      - asset: assets\fonts\Mulish-Medium.ttf
-  #        weight: 500
-  #      - asset: assets\fonts\Mulish-SemiBold.ttf
-  #        weight: 600
-  #      - asset: assets\fonts\Mulish-Bold.ttf
-  #        weight: 700
+  fonts:
+    - family: Mulish
+      fonts:
+        - asset: assets\fonts\Mulish-Regular.ttf
+        - asset: assets\fonts\Mulish-Medium.ttf
+          weight: 500
+        - asset: assets\fonts\Mulish-SemiBold.ttf
+          weight: 600
+        - asset: assets\fonts\Mulish-Bold.ttf
+          weight: 700
 
   # example:
   # fonts:
